update package name, update card images, update launcher icon, final touches

--- a/app/src/main/res/drawable/c4ofclubs.xml
+++ b/app/src/main/res/drawable/c4ofclubs.xml
@@ -1,35 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,4H4V284h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M 0.04 0.01 H 180.07 V 287.87 H 0.04 V 0.01 Z" />
     <path
-        android:pathData="M26.66,30.09h2.55v2a0.7,0.7 0,0 1,-0.18 0.48,0.68 0.68,0 0,1 -0.53,0.2L26.66,32.77v4.94h-3L23.66,32.78L15.09,32.78a1,1 0,0 1,-1 -0.76l-0.35,-1.75 9.59,-12.81h3.28ZM23.66,23.47c0,-0.3 0,-0.62 0,-1s0.05,-0.7 0.1,-1.08l-6.29,8.67h6.16Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M52.07,61.81h7.45v5.85A2,2,0,0,1,59,69.07a2,2,0,0,1-1.55 0.59 H52.07V84.12H43.23V69.67h-25a2.76,2.76,0,0,1-1.8-0.63,2.73,2.73,0,0,1-1-1.58l-1-5.12,28-37.45h9.58ZM43.23,42.45q0-1.31 0.08 -2.82t0.29-3.15L25.23,61.81h18Z" />
     <path
-        android:pathData="M153.24,258.17h-2.55v-2a0.7,0.7 0,0 1,0.18 -0.48,0.68 0.68,0 0,1 0.53,-0.2h1.83v-4.94h3v4.94h8.54a1,1 0,0 1,1 0.76l0.35,1.75 -9.59,12.81h-3.28ZM156.24,264.79q0,0.45 0,1t-0.1,1.08l6.29,-8.67h-6.16Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M128.35,226.29h-7.47v-5.87a2.05,2.05,0,0,1,0.53-1.42,2,2,0,0,1,1.56-0.6h5.38V203.92h8.87v14.49h25a2.77,2.77,0,0,1,1.81 0.64 ,2.74,2.74,0,0,1,1,1.58l1,5.13L138,263.33h-9.61Zm8.87,19.42q0,1.31-0.08,2.83t-0.29,3.16l18.43-25.41H137.22Z" />
     <path
-        android:pathData="M55.66,76.12a8.6,8.6 0,0 1,-1.46 -6.63,8.07 8.07,0 0,1 8,-6.57 8.18,8.18 0,0 1,8.13 7.13,7.33 7.33,0 0,1 -1.56,6c0.1,0.25 4.29,-1.46 8.1,3a8,8 0,0 1,-0.14 10.45,8.32 8.32,0 0,1 -13.17,-1c-0.18,0.08 0.33,2.32 1.71,4.48a19.36,19.36 0,0 0,3.13 3.52c0,0.23 0,0.46 -0.32,0.51s-11.47,0 -11.7,0 -0.38,-0.4 0,-0.74a16,16 0,0 0,3.06 -3.41,11.84 11.84,0 0,0 1.47,-4.45c-0.05,0 -2,3.11 -5.28,3.69 -3.59,0.63 -6.94,-0.67 -8.54,-3.41s-2.31,-6.17 0.65,-9.76A8,8 0,0 1,55.66 76.12Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M30.37,112.12a8.6,8.6,0,0,1-1.46-6.63,8.07,8.07,0,0,1,8-6.57A8.18,8.18,0,0,1,45,106.06a7.33,7.33,0,0,1-1.56,6c0.1 0.25 ,4.29-1.46,8.1,3a8,8,0,0,1-0.14,10.45,8.32,8.32,0,0,1-13.17-1c-0.18 0.08 0.33,2.32,1.71,4.48a19.36,19.36,0,0,0,3.13,3.52c0,0.23,0,0.46-0.32 0.51 s-11.47,0-11.7,0-0.38-0.4,0-0.74a16,16,0,0,0,3.06-3.41,11.84,11.84,0,0,0,1.47-4.45c-0.05,0-2,3.11-5.28,3.69-3.59 0.63 -6.94-0.67-8.54-3.41s-2.31-6.17 0.65 -9.76A8,8,0,0,1,30.37,112.12Z" />
     <path
-        android:pathData="M109.61,76.12a8.6,8.6 0,0 1,-1.46 -6.63,8.07 8.07,0 0,1 8,-6.57 8.18,8.18 0,0 1,8.13 7.13,7.33 7.33,0 0,1 -1.56,6c0.1,0.25 4.29,-1.46 8.1,3a8,8 0,0 1,-0.14 10.45,8.32 8.32,0 0,1 -13.17,-1c-0.18,0.08 0.33,2.32 1.71,4.48a19.36,19.36 0,0 0,3.13 3.52c0,0.23 0,0.46 -0.32,0.51s-11.47,0 -11.7,0 -0.38,-0.4 0,-0.74a16,16 0,0 0,3.06 -3.41,11.84 11.84,0 0,0 1.47,-4.45c-0.05,0 -2,3.11 -5.28,3.69 -3.59,0.63 -6.94,-0.67 -8.54,-3.41s-2.31,-6.17 0.65,-9.76A8,8 0,0 1,109.61 76.12Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M122.74,211.77a8.6,8.6 0,0 1,1.46 6.63,8.07 8.07,0 0,1 -8,6.57 8.18,8.18 0,0 1,-8.13 -7.13,7.33 7.33,0 0,1 1.56,-6c-0.1,-0.25 -4.29,1.46 -8.1,-3a8,8 0,0 1,0.14 -10.45,8.32 8.32,0 0,1 13.17,1c0.18,-0.08 -0.33,-2.32 -1.71,-4.48a19.36,19.36 0,0 0,-3.13 -3.52c0,-0.23 0,-0.46 0.32,-0.51s11.47,0 11.7,0 0.38,0.4 0,0.74a16,16 0,0 0,-3.06 3.41,11.84 11.84,0 0,0 -1.47,4.45c0.05,0 2,-3.11 5.28,-3.69 3.59,-0.63 6.94,0.67 8.54,3.41s2.31,6.17 -0.65,9.76A8,8 0,0 1,122.74 211.77Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M68.93,211.77a8.6,8.6 0,0 1,1.46 6.63,8.07 8.07,0 0,1 -8,6.57 8.18,8.18 0,0 1,-8.13 -7.13,7.33 7.33,0 0,1 1.56,-6c-0.1,-0.25 -4.29,1.46 -8.1,-3a8,8 0,0 1,0.14 -10.45,8.32 8.32,0 0,1 13.17,1c0.18,-0.08 -0.33,-2.32 -1.71,-4.48a19.36,19.36 0,0 0,-3.13 -3.52c0,-0.23 0,-0.46 0.32,-0.51s11.47,0 11.7,0 0.38,0.4 0,0.74A16,16 0,0 0,65.12 195a11.84,11.84 0,0 0,-1.47 4.45c0.05,0 2,-3.11 5.28,-3.69 3.59,-0.63 6.94,0.67 8.54,3.41s2.31,6.17 -0.65,9.76A8,8 0,0 1,68.93 211.77Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M18.53,48.4a3.63,3.63 0,0 1,-0.62 -2.8,3.41 3.41,0 0,1 3.38,-2.77 3.46,3.46 0,0 1,3.43 3,3.1 3.1,0 0,1 -0.66,2.53 3.52,3.52 0,0 1,3.42 1.28,3.37 3.37,0 0,1 -0.06,4.42 3.52,3.52 0,0 1,-5.56 -0.43,3.94 3.94,0 0,0 0.72,1.89A8.18,8.18 0,0 0,23.91 57c0,0.1 0,0.2 -0.14,0.21s-4.84,0 -4.94,0 -0.16,-0.17 0,-0.31a6.74,6.74 0,0 0,1.29 -1.44,5 5,0 0,0 0.62,-1.88 3.91,3.91 0,0 1,-2.23 1.56,3.38 3.38,0 0,1 -3.61,-1.44 3.31,3.31 0,0 1,0.27 -4.12A3.39,3.39 0,0 1,18.53 48.4Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M161.38,239.89a3.63,3.63 0,0 1,0.62 2.8,3.41 3.41,0 0,1 -3.38,2.77 3.46,3.46 0,0 1,-3.43 -3,3.1 3.1,0 0,1 0.66,-2.53 3.52,3.52 0,0 1,-3.42 -1.28,3.37 3.37,0 0,1 0.06,-4.42 3.52,3.52 0,0 1,5.56 0.43,3.94 3.94,0 0,0 -0.72,-1.89 8.18,8.18 0,0 0,-1.32 -1.49c0,-0.1 0,-0.2 0.14,-0.21s4.84,0 4.94,0 0.16,0.17 0,0.31a6.74,6.74 0,0 0,-1.29 1.44,5 5,0 0,0 -0.62,1.88 3.91,3.91 0,0 1,2.23 -1.56,3.38 3.38,0 0,1 3.61,1.44 3.31,3.31 0,0 1,-0.27 4.12A3.39,3.39 0,0 1,161.38 239.89Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M149.87,175.58a8.6,8.6,0,0,1,1.46,6.63,8.07,8.07,0,0,1-8,6.57,8.18,8.18,0,0,1-8.13-7.13,7.33,7.33,0,0,1,1.56-6c-0.1-0.25-4.29,1.46-8.1-3a8,8,0,0,1,0.14-10.45,8.32,8.32,0,0,1,13.17,1c0.18-0.08-0.33-2.32-1.71-4.48a19.36,19.36,0,0,0-3.13-3.52c0-0.23,0-0.46 0.32 -0.51s11.47,0,11.7,0,0.38 0.4 ,0,0.74a16,16,0,0,0-3.06,3.41,11.84,11.84,0,0,0-1.47,4.45c0.05,0,2-3.11,5.28-3.69,3.59-0.63,6.94 0.67 ,8.54,3.41s2.31,6.17-0.65,9.76A8,8,0,0,1,149.87,175.58Z" />
 </vector>
