--- a/app/src/main/res/drawable/c4ofhearts.xml
+++ b/app/src/main/res/drawable/c4ofhearts.xml
@@ -1,35 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M4.04,4.01h172.01v279.95h-172.01z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M 0.04 0.09 H 180.11 V 288.06 H 0.04 V 0.09 Z" />
     <path
-        android:pathData="M21.26,44.8a5.63,5.63 0,0 1,1.05 -1.43,3.74 3.74,0 0,1 2.13,-0.8 3.36,3.36 0,0 1,2.35 0.8,4.19 4.19,0 0,1 1.12,2 5.89,5.89 0,0 1,-0.37 3.42,17.94 17.94,0 0,1 -3.08,4.32c-0.67,0.75 -1.68,1.93 -2.15,2.49s-0.91,1.25 -1.05,1.25 -0.7,-0.79 -1.1,-1.25S18.8,54 18,53.12A23.21,23.21 0,0 1,16 50.54,8.59 8.59,0 0,1 15,48.82a6,6 0,0 1,-0.33 -3.42A3.41,3.41 0,0 1,18 42.6a3.62,3.62 0,0 1,2.13 0.77A4.58,4.58 0,0 1,21.26 44.8Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M36.93,104.16c0.16,0,1-2.24,2.49-3.38a8.85,8.85,0,0,1,5-1.88A7.94,7.94,0,0,1,50,100.78a9.91,9.91,0,0,1,2.66,4.8,13.93,13.93,0,0,1-0.87,8.09c-1.6,3.92-5.7,8.46-7.28,10.23s-4,4.57-5.09,5.9-2.16,2.95-2.49,2.95-1.66-1.88-2.6-2.95-3.23-4-5-6a54.9,54.9,0,0,1-4.91-6.11,20.33,20.33,0,0,1-2.2-4.07,14.26,14.26,0,0,1-0.77-8.09A8.08,8.08,0,0,1,29.29,99a8.56,8.56,0,0,1,5,1.81A10.84,10.84,0,0,1,36.93,104.16Z" />
     <path
-        android:pathData="M62.22,68.2c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88 9.91,9.91 0,0 1,2.66 4.8,13.93 13.93,0 0,1 -0.87,8.09c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95 -1.66,-1.88 -2.6,-2.95 -3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11,20.33 20.33,0 0,1 -2.2,-4.07 14.26,14.26 0,0 1,-0.77 -8.09A8.08,8.08 0,0 1,54.59 63a8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,62.22 68.2Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M143.65,183.61c-0.16,0-1,2.24-2.49,3.38a8.85,8.85,0,0,1-5,1.88,7.94,7.94,0,0,1-5.55-1.88,9.91,9.91,0,0,1-2.66-4.8,13.93,13.93,0,0,1,0.87-8.09c1.6-3.92,5.7-8.46,7.28-10.23s4-4.57,5.09-5.9,2.16-2.95,2.49-2.95,1.66,1.88,2.6,2.95,3.23,4,5,6A54.9,54.9,0,0,1,156.2,170a20.33,20.33,0,0,1,2.2,4.07,14.26,14.26,0,0,1,0.77,8.09,8.08,8.08,0,0,1-7.88,6.61,8.56,8.56,0,0,1-5-1.81A10.84,10.84,0,0,1,143.65,183.61Z" />
     <path
-        android:pathData="M116.11,68.2c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88 9.91,9.91 0,0 1,2.66 4.8,13.93 13.93,0 0,1 -0.87,8.09c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95 -1.66,-1.88 -2.6,-2.95 -3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11,20.33 20.33,0 0,1 -2.2,-4.07 14.26,14.26 0,0 1,-0.77 -8.09A8.08,8.08 0,0 1,108.47 63a8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,116.11 68.2Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M52.1,61.69h7.47v5.87A2,2,0,0,1,59,69a2,2,0,0,1-1.56 0.6 H52.1V84H43.24V69.57h-25a2.77,2.77,0,0,1-1.81-0.64,2.74,2.74,0,0,1-1-1.58l-1-5.13L42.5,24.69h9.6Zm-8.86-19.4q0-1.31 0.08 -2.83t0.29-3.16L25.19,61.69h18Z" />
     <path
-        android:pathData="M116.3,219.71c-0.16,0 -1,2.24 -2.49,3.38a8.85,8.85 0,0 1,-5 1.88,7.94 7.94,0 0,1 -5.55,-1.88 9.91,9.91 0,0 1,-2.66 -4.8,13.93 13.93,0 0,1 0.87,-8.09c1.6,-3.92 5.7,-8.46 7.28,-10.23s4,-4.57 5.09,-5.9 2.16,-2.95 2.49,-2.95 1.66,1.88 2.6,2.95 3.23,4 5,6a54.9,54.9 0,0 1,4.91 6.11,20.33 20.33,0 0,1 2.2,4.07 14.26,14.26 0,0 1,0.77 8.09,8.08 8.08,0 0,1 -7.88,6.61 8.56,8.56 0,0 1,-5 -1.81A10.84,10.84 0,0 1,116.3 219.71Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M62.41,219.68c-0.16,0 -1,2.24 -2.49,3.38a8.85,8.85 0,0 1,-5 1.88,7.94 7.94,0 0,1 -5.55,-1.88 9.91,9.91 0,0 1,-2.66 -4.8,13.93 13.93,0 0,1 0.87,-8.09c1.6,-3.92 5.7,-8.46 7.28,-10.23s4,-4.57 5.09,-5.9 2.16,-2.95 2.49,-2.95S64.07,193 65,194s3.23,4 5,6A54.9,54.9 0,0 1,75 206.1a20.33,20.33 0,0 1,2.2 4.07,14.26 14.26,0 0,1 0.77,8.09A8.08,8.08 0,0 1,70 224.88a8.56,8.56 0,0 1,-5 -1.81A10.84,10.84 0,0 1,62.41 219.68Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M158.62,243a5.63,5.63 0,0 1,-1.05 1.43,3.74 3.74,0 0,1 -2.13,0.8 3.36,3.36 0,0 1,-2.35 -0.8,4.19 4.19,0 0,1 -1.12,-2 5.89,5.89 0,0 1,0.37 -3.42,17.94 17.94,0 0,1 3.08,-4.32c0.67,-0.75 1.68,-1.93 2.15,-2.49s0.91,-1.25 1.05,-1.25 0.7,0.79 1.1,1.25 1.37,1.67 2.13,2.52a23.21,23.21 0,0 1,2.08 2.58,8.59 8.59,0 0,1 0.93,1.72 6,6 0,0 1,0.33 3.42,3.41 3.41,0 0,1 -3.33,2.8 3.62,3.62 0,0 1,-2.13 -0.77A4.58,4.58 0,0 1,158.62 243Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M26.7,29.86h2.55v2a0.7,0.7 0,0 1,-0.18 0.48,0.68 0.68,0 0,1 -0.53,0.2L26.7,32.54v4.94h-3L23.7,32.55L15.14,32.55a1,1 0,0 1,-1 -0.76L13.83,30l9.59,-12.81L26.7,17.19ZM23.7,23.24q0,-0.45 0,-1t0.1,-1.08l-6.29,8.67h6.16Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M153.28,258h-2.55v-2a0.7,0.7 0,0 1,0.18 -0.48,0.68 0.68,0 0,1 0.53,-0.2h1.83v-4.94h3v4.94h8.54a1,1 0,0 1,1 0.76l0.35,1.75 -9.59,12.81h-3.28ZM156.28,264.62q0,0.45 0,1t-0.1,1.08l6.29,-8.67L156.3,258.03Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M128.3,226.08h-7.47v-5.87a2,2,0,0,1,0.53-1.42,2,2,0,0,1,1.56-0.6h5.38V203.71h8.87V218.2h25a2.77,2.77,0,0,1,1.81 0.64 ,2.74,2.74,0,0,1,1,1.58l1,5.13L137.9,263.11H128.3Zm8.87,19.42q0,1.31-0.08,2.83t-0.29,3.16l18.43-25.41H137.16Z" />
 </vector>
