--- a/app/src/main/res/drawable/c11ofhearts.xml
+++ b/app/src/main/res/drawable/c11ofhearts.xml
@@ -1,29 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M4.04,4.01h172.01v279.95h-172.01z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M -0.04 0 H 180.01 V 288.07 H -0.04 V 0 Z" />
     <path
-        android:pathData="M114.6,155.57a51.41,51.41 0,0 1,-2.06 15.07,31.29 31.29,0 0,1 -6.13,11.44 26.77,26.77 0,0 1,-10.18 7.26,36.75 36.75,0 0,1 -14.18,2.54 58.68,58.68 0,0 1,-7.26 -0.45A65.31,65.31 0,0 1,67.33 190l1,-11a3.64,3.64 0,0 1,1.13 -2.43,4.12 4.12,0 0,1 2.91,-0.93 13,13 0,0 1,3 0.48,22.56 22.56,0 0,0 11.68,-0.65 11.72,11.72 0,0 0,5 -3.6,16.58 16.58,0 0,0 3,-6.41 38.34,38.34 0,0 0,1 -9.56V91.71H114.6Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M114.6,155.57a51.41,51.41,0,0,1-2.06,15.07,31.29,31.29,0,0,1-6.13,11.44,26.77,26.77,0,0,1-10.18,7.26,36.75,36.75,0,0,1-14.18,2.54,58.68,58.68,0,0,1-7.26-0.45A65.31,65.31,0,0,1,67.33,190l1-11a3.64,3.64,0,0,1,1.13-2.43,4.12,4.12,0,0,1,2.91-0.93,13,13,0,0,1,3,0.48,22.56,22.56,0,0,0,11.68-0.65,11.72,11.72,0,0,0,5-3.6,16.58,16.58,0,0,0,3-6.41,38.34,38.34,0,0,0,1-9.56V91.71H114.6Z" />
     <path
-        android:pathData="M96.32,63.26c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88 9.91,9.91 0,0 1,2.66 4.8,13.93 13.93,0 0,1 -0.87,8.09c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95 -1.66,-1.88 -2.6,-2.95 -3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11,20.33 20.33,0 0,1 -2.2,-4.07 14.26,14.26 0,0 1,-0.77 -8.09,8.08 8.08,0 0,1 7.88,-6.61 8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,96.32 63.26Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M18.48,44.78a5.63,5.63 0,0 1,1.05 -1.43,3.74 3.74,0 0,1 2.13,-0.8 3.36,3.36 0,0 1,2.35 0.8,4.19 4.19,0 0,1 1.12,2 5.89,5.89 0,0 1,-0.37 3.42,17.94 17.94,0 0,1 -3.08,4.32c-0.67,0.75 -1.68,1.93 -2.15,2.49s-0.91,1.25 -1.05,1.25 -0.7,-0.79 -1.1,-1.25S16,53.95 15.25,53.1a23.21,23.21 0,0 1,-2.08 -2.58,8.59 8.59,0 0,1 -0.93,-1.72 6,6 0,0 1,-0.33 -3.42,3.41 3.41,0 0,1 3.33,-2.8 3.62,3.62 0,0 1,2.13 0.77A4.58,4.58 0,0 1,18.48 44.78Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M161.33,243a5.63,5.63 0,0 1,-1.05 1.43,3.74 3.74,0 0,1 -2.13,0.8 3.36,3.36 0,0 1,-2.35 -0.8,4.19 4.19,0 0,1 -1.12,-2 5.89,5.89 0,0 1,0.37 -3.42,17.94 17.94,0 0,1 3.08,-4.32c0.67,-0.75 1.68,-1.93 2.15,-2.49s0.91,-1.25 1.05,-1.25 0.7,0.79 1.1,1.25 1.37,1.67 2.13,2.52a23.21,23.21 0,0 1,2.08 2.58,8.59 8.59,0 0,1 0.93,1.72 6,6 0,0 1,0.33 3.42,3.41 3.41,0 0,1 -3.33,2.8 3.62,3.62 0,0 1,-2.13 -0.77A4.58,4.58 0,0 1,161.33 243Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M23.6,30.29a10.49,10.49 0,0 1,-0.42 3.08,6.38 6.38,0 0,1 -1.25,2.34 5.47,5.47 0,0 1,-2.08 1.48,7.51 7.51,0 0,1 -2.9,0.52 12,12 0,0 1,-1.48 -0.09,13.25 13.25,0 0,1 -1.53,-0.29l0.2,-2.24a0.74,0.74 0,0 1,0.23 -0.5,0.84 0.84,0 0,1 0.59,-0.19 2.66,2.66 0,0 1,0.62 0.1A4.6,4.6 0,0 0,18 34.37a2.39,2.39 0,0 0,1 -0.73,3.38 3.38,0 0,0 0.62,-1.31 7.85,7.85 0,0 0,0.21 -2V17.24H23.6Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M156.24,257.53a10.49,10.49 0,0 1,0.42 -3.08,6.4 6.4,0 0,1 1.25,-2.34 5.47,5.47 0,0 1,2.08 -1.48,7.5 7.5,0 0,1 2.9,-0.52 12,12 0,0 1,1.48 0.09,13.25 13.25,0 0,1 1.53,0.29l-0.2,2.24a0.75,0.75 0,0 1,-0.23 0.5,0.85 0.85,0 0,1 -0.6,0.19 2.65,2.65 0,0 1,-0.62 -0.1,4.62 4.62,0 0,0 -2.39,0.13 2.4,2.4 0,0 0,-1 0.74,3.39 3.39,0 0,0 -0.62,1.31 7.85,7.85 0,0 0,-0.21 2v13.13h-3.77Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M96.32,63.26c0.16,0,1-2.24,2.49-3.38a8.85,8.85,0,0,1,5-1.88,7.94,7.94,0,0,1,5.55,1.88,9.91,9.91,0,0,1,2.66,4.8,13.93,13.93,0,0,1-0.87,8.09c-1.6,3.92-5.7,8.46-7.28,10.23s-4,4.57-5.09,5.9-2.16,2.95-2.49,2.95-1.66-1.88-2.6-2.95-3.23-4-5-6a54.9,54.9,0,0,1-4.91-6.11,20.33,20.33,0,0,1-2.2-4.07,14.26,14.26,0,0,1-0.77-8.09,8.08,8.08,0,0,1,7.88-6.61,8.56,8.56,0,0,1,5,1.81A10.84,10.84,0,0,1,96.32,63.26Z" />
 </vector>
