--- a/app/src/main/res/drawable/c11ofspades.xml
+++ b/app/src/main/res/drawable/c11ofspades.xml
@@ -1,29 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,4H4V284h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M -0.02 -0.04 H 180.43 V 287.87 H -0.02 V -0.04 Z" />
     <path
-        android:pathData="M90.5,57.11c0.21,0 4.35,4.79 6.53,6.76s7.55,7.15 8.43,8.28A7.85,7.85 0,0 1,107 76.22a9.3,9.3 0,0 1,-1.71 6.2A8.11,8.11 0,0 1,99.25 86a8.45,8.45 0,0 1,-7.2 -2.5,14.66 14.66,0 0,0 2.41,4.92 15,15 0,0 0,2.35 2.34,0.48 0.48,0 0,1 0,0.64H84.11a0.42,0.42 0,0 1,0 -0.71,23.18 23.18,0 0,0 2.27,-2.27c1.17,-1.4 2.68,-4.86 2.47,-4.92A8.62,8.62 0,0 1,83.11 86a9.58,9.58 0,0 1,-7.58 -3.62,8.64 8.64,0 0,1 -1.6,-6.21A7.59,7.59 0,0 1,75.57 72c1.17,-1.45 7,-6.84 8.22,-8S90.29,57.12 90.5,57.11Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M90.5,57.11c0.21,0,4.35,4.79,6.53,6.76s7.55,7.15,8.43,8.28A7.85,7.85,0,0,1,107,76.22a9.3,9.3,0,0,1-1.71,6.2A8.11,8.11,0,0,1,99.25,86a8.45,8.45,0,0,1-7.2-2.5,14.66,14.66,0,0,0,2.41,4.92,15,15,0,0,0,2.35,2.34 0.48 0.48,0,0,1,0,0.64H84.11a0.42 0.42 ,0,0,1,0-0.71,23.18,23.18,0,0,0,2.27-2.27c1.17-1.4,2.68-4.86,2.47-4.92A8.62,8.62,0,0,1,83.11,86a9.58,9.58,0,0,1-7.58-3.62,8.64,8.64,0,0,1-1.6-6.21A7.59,7.59,0,0,1,75.57,72c1.17-1.45,7-6.84,8.22-8S90.29,57.12,90.5,57.11Z" />
     <path
-        android:pathData="M18.59,42.68c0.09,0 1.81,2 2.72,2.82s3.15,3 3.52,3.45a3.28,3.28 0,0 1,0.66 1.7,3.88 3.88,0 0,1 -0.71,2.59 3.38,3.38 0,0 1,-2.54 1.5,3.52 3.52,0 0,1 -3,-1 6.11,6.11 0,0 0,1 2.05,6.28 6.28,0 0,0 1,1 0.2,0.2 0,0 1,0 0.27H15.92a0.18,0.18 0,0 1,0 -0.3,9.67 9.67,0 0,0 0.95,-0.95 6.28,6.28 0,0 0,1 -2.05,3.59 3.59,0 0,1 -2.4,1.05 4,4 0,0 1,-3.16 -1.51,3.6 3.6,0 0,1 -0.67,-2.59 3.16,3.16 0,0 1,0.69 -1.77c0.49,-0.61 2.9,-2.85 3.43,-3.33S18.5,42.68 18.59,42.68Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M161.32,246.42c-0.09,0 -1.81,-2 -2.72,-2.82s-3.15,-3 -3.52,-3.45a3.28,3.28 0,0 1,-0.66 -1.7,3.88 3.88,0 0,1 0.71,-2.59 3.38,3.38 0,0 1,2.54 -1.5,3.52 3.52,0 0,1 3,1 6.11,6.11 0,0 0,-1 -2.05,6.28 6.28,0 0,0 -1,-1 0.2,0.2 0,0 1,0 -0.27H164a0.18,0.18 0,0 1,0 0.3,9.67 9.67,0 0,0 -0.95,0.95 6.28,6.28 0,0 0,-1 2.05,3.59 3.59,0 0,1 2.4,-1.05 4,4 0,0 1,3.16 1.51,3.6 3.6,0 0,1 0.67,2.59 3.16,3.16 0,0 1,-0.69 1.77c-0.49,0.61 -2.9,2.85 -3.43,3.33S161.41,246.41 161.32,246.42Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M115.16,155.3a51.41,51.41 0,0 1,-2.06 15.07A31.29,31.29 0,0 1,107 181.82a26.77,26.77 0,0 1,-10.18 7.26,36.75 36.75,0 0,1 -14.18,2.54 58.68,58.68 0,0 1,-7.26 -0.45,65.31 65.31,0 0,1 -7.47,-1.41l1,-11A3.64,3.64 0,0 1,70 176.37a4.12,4.12 0,0 1,2.91 -0.93,13 13,0 0,1 3,0.48 22.56,22.56 0,0 0,11.68 -0.65,11.72 11.72,0 0,0 5,-3.6 16.58,16.58 0,0 0,3 -6.41,38.34 38.34,0 0,0 1,-9.56V91.44h18.43Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M23.6,30.3a10.5,10.5 0,0 1,-0.42 3.08,6.37 6.37,0 0,1 -1.25,2.34 5.47,5.47 0,0 1,-2.08 1.48,7.52 7.52,0 0,1 -2.9,0.52 12,12 0,0 1,-1.48 -0.09,13.25 13.25,0 0,1 -1.53,-0.29l0.2,-2.24a0.74,0.74 0,0 1,0.23 -0.5,0.84 0.84,0 0,1 0.59,-0.19 2.65,2.65 0,0 1,0.62 0.1A4.59,4.59 0,0 0,18 34.38a2.4,2.4 0,0 0,1 -0.74,3.38 3.38,0 0,0 0.62,-1.31 7.86,7.86 0,0 0,0.21 -2V17.25H23.6Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M156.23,258.66a10.49,10.49 0,0 1,0.42 -3.08,6.4 6.4,0 0,1 1.25,-2.34 5.47,5.47 0,0 1,2.08 -1.48,7.5 7.5,0 0,1 2.9,-0.52 12,12 0,0 1,1.48 0.09,13.25 13.25,0 0,1 1.53,0.29l-0.2,2.24a0.75,0.75 0,0 1,-0.23 0.5,0.85 0.85,0 0,1 -0.6,0.19 2.65,2.65 0,0 1,-0.62 -0.1,4.62 4.62,0 0,0 -2.39,0.13 2.4,2.4 0,0 0,-1 0.74,3.39 3.39,0 0,0 -0.62,1.31 7.85,7.85 0,0 0,-0.21 2v13.13h-3.77Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M115.16,155.3a51.41,51.41,0,0,1-2.06,15.07A31.29,31.29,0,0,1,107,181.82a26.77,26.77,0,0,1-10.18,7.26,36.75,36.75,0,0,1-14.18,2.54,58.68,58.68,0,0,1-7.26-0.45,65.31,65.31,0,0,1-7.47-1.41l1-11A3.64,3.64,0,0,1,70,176.37a4.12,4.12,0,0,1,2.91-0.93,13,13,0,0,1,3,0.48,22.56,22.56,0,0,0,11.68-0.65,11.72,11.72,0,0,0,5-3.6,16.58,16.58,0,0,0,3-6.41,38.34,38.34,0,0,0,1-9.56V91.44h18.43Z" />
 </vector>
