--- a/app/src/main/res/drawable/c13ofclubs.xml
+++ b/app/src/main/res/drawable/c13ofclubs.xml
@@ -1,29 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,4H4V284h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M 0.01 -0.04 H 179.93 V 288.03 H 0.01 V -0.04 Z" />
     <path
-        android:pathData="M70.8,69a8.6,8.6 0,0 1,-1.46 -6.63,8.07 8.07,0 0,1 8,-6.57A8.18,8.18 0,0 1,85.46 63a7.33,7.33 0,0 1,-1.56 6c0.1,0.25 4.29,-1.46 8.1,3a8,8 0,0 1,-0.14 10.45,8.32 8.32,0 0,1 -13.17,-1c-0.18,0.08 0.33,2.32 1.71,4.48a19.36,19.36 0,0 0,3.13 3.52c0,0.23 0,0.46 -0.32,0.51s-11.47,0 -11.7,0 -0.38,-0.4 0,-0.74a16,16 0,0 0,3.06 -3.41,11.84 11.84,0 0,0 1.47,-4.45c-0.05,0 -2,3.11 -5.28,3.69 -3.59,0.63 -6.94,-0.67 -8.54,-3.41s-2.31,-6.17 0.65,-9.76A8,8 0,0 1,70.8 69Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M70.8,69a8.6,8.6,0,0,1-1.46-6.63,8.07,8.07,0,0,1,8-6.57A8.18,8.18,0,0,1,85.46,63a7.33,7.33,0,0,1-1.56,6c0.1 0.25 ,4.29-1.46,8.1,3a8,8,0,0,1-0.14,10.45,8.32,8.32,0,0,1-13.17-1c-0.18 0.08 0.33,2.32,1.71,4.48a19.36,19.36,0,0,0,3.13,3.52c0,0.23,0,0.46-0.32 0.51 s-11.47,0-11.7,0-0.38-0.4,0-0.74a16,16,0,0,0,3.06-3.41,11.84,11.84,0,0,0,1.47-4.45c-0.05,0-2,3.11-5.28,3.69-3.59 0.63 -6.94-0.67-8.54-3.41s-2.31-6.17 0.65 -9.76A8,8,0,0,1,70.8,69Z" />
     <path
-        android:pathData="M20.44,48.31a3.63,3.63 0,0 1,-0.62 -2.8,3.41 3.41,0 0,1 3.38,-2.77 3.46,3.46 0,0 1,3.43 3A3.1,3.1 0,0 1,26 48.27a3.52,3.52 0,0 1,3.42 1.28A3.37,3.37 0,0 1,29.34 54a3.52,3.52 0,0 1,-5.56 -0.43,3.94 3.94,0 0,0 0.72,1.89 8.18,8.18 0,0 0,1.32 1.49c0,0.1 0,0.2 -0.14,0.21s-4.84,0 -4.94,0 -0.16,-0.17 0,-0.31a6.74,6.74 0,0 0,1.29 -1.44,5 5,0 0,0 0.62,-1.88 3.91,3.91 0,0 1,-2.23 1.56,3.38 3.38,0 0,1 -3.61,-1.44 3.31,3.31 0,0 1,0.27 -4.12A3.39,3.39 0,0 1,20.44 48.31Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M159.68,239.79a3.63,3.63 0,0 1,0.62 2.8,3.41 3.41,0 0,1 -3.38,2.77 3.46,3.46 0,0 1,-3.43 -3,3.1 3.1,0 0,1 0.66,-2.53 3.52,3.52 0,0 1,-3.42 -1.28,3.37 3.37,0 0,1 0.06,-4.42 3.52,3.52 0,0 1,5.56 0.43,3.94 3.94,0 0,0 -0.72,-1.89 8.18,8.18 0,0 0,-1.32 -1.49c0,-0.1 0,-0.2 0.14,-0.21s4.84,0 4.94,0 0.16,0.17 0,0.31a6.74,6.74 0,0 0,-1.29 1.44,5 5,0 0,0 -0.62,1.88 3.91,3.91 0,0 1,2.23 -1.56,3.38 3.38,0 0,1 3.61,1.44 3.31,3.31 0,0 1,-0.27 4.12A3.39,3.39 0,0 1,159.68 239.79Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M71.27,131.72h4.32A11.21,11.21 0,0 0,79.9 131a7.3,7.3 0,0 0,2.95 -2.29l27.34,-34.6a9.91,9.91 0,0 1,3.6 -3,11.53 11.53,0 0,1 4.76,-0.86h15.9l-33.37,41.18a30.15,30.15 0,0 1,-3 3.22A13.78,13.78 0,0 1,95 136.72a13.64,13.64 0,0 1,4.08 2.33,21.6 21.6,0 0,1 3.53,3.84L137,189.27H120.67a10.12,10.12 0,0 1,-4.9 -0.92,7.66 7.66,0 0,1 -2.71,-2.71L85,149.06A8.31,8.31 0,0 0,82 146.49a12,12 0,0 0,-4.87 -0.79H71.27v43.58H52.84V90.13H71.27Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M19.42,26h0.88a2.3,2.3 0,0 0,0.88 -0.15,1.49 1.49,0 0,0 0.6,-0.47l5.59,-7.07a2,2 0,0 1,0.73 -0.62,2.36 2.36,0 0,1 1,-0.17h3.25l-6.82,8.41a6.26,6.26 0,0 1,-0.62 0.66,2.84 2.84,0 0,1 -0.63,0.43 2.8,2.8 0,0 1,0.83 0.48,4.43 4.43,0 0,1 0.72,0.78l7,9.48H29.51a2.06,2.06 0,0 1,-1 -0.19A1.55,1.55 0,0 1,28 37l-5.73,-7.48A1.7,1.7 0,0 0,21.6 29a2.45,2.45 0,0 0,-1 -0.16H19.42v8.9H15.65V17.45h3.77Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M160.51,262.09h-0.88a2.29,2.29 0,0 0,-0.88 0.15,1.49 1.49,0 0,0 -0.6,0.47l-5.59,7.07a2,2 0,0 1,-0.73 0.62,2.37 2.37,0 0,1 -1,0.17H147.6l6.82,-8.41a6.16,6.16 0,0 1,0.62 -0.66,2.83 2.83,0 0,1 0.63,-0.43 2.77,2.77 0,0 1,-0.83 -0.48,4.36 4.36,0 0,1 -0.72,-0.78l-7,-9.48h3.33a2.06,2.06 0,0 1,1 0.19,1.57 1.57,0 0,1 0.55,0.55l5.73,7.48a1.71,1.71 0,0 0,0.63 0.53,2.47 2.47,0 0,0 1,0.16h1.19v-8.9h3.77v20.26h-3.77Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M71.27,131.72h4.32A11.21,11.21,0,0,0,79.9,131a7.3,7.3,0,0,0,2.95-2.29l27.34-34.6a9.91,9.91,0,0,1,3.6-3,11.53,11.53,0,0,1,4.76-0.86h15.9l-33.37,41.18a30.15,30.15,0,0,1-3,3.22A13.78,13.78,0,0,1,95,136.72a13.64,13.64,0,0,1,4.08,2.33,21.6,21.6,0,0,1,3.53,3.84L137,189.27H120.67a10.12,10.12,0,0,1-4.9-0.92,7.66,7.66,0,0,1-2.71-2.71L85,149.06A8.31,8.31,0,0,0,82,146.49a12,12,0,0,0-4.87-0.79H71.27v43.58H52.84V90.13H71.27Z" />
 </vector>
