--- a/app/src/main/res/drawable/c13ofdiamonds.xml
+++ b/app/src/main/res/drawable/c13ofdiamonds.xml
@@ -1,29 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,4H4V284h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M -0.06 -0.04 H 179.97 V 288.09 H -0.06 V -0.04 Z" />
     <path
-        android:pathData="M71.37,57.35a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,71.37 57.35Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M71.37,57.35a14.71,14.71,0,0,1,2,2.81c1.75,2.72,3.14,4.26,4.46,6,4.37,5.77,7.22,8.29,7.22,8.53a81.48,81.48,0,0,0-7.22,8.2c-1.68,2.26-3.3,4.24-4.46,5.94a22.93,22.93,0,0,1-2,2.81,13.86,13.86,0,0,1-2.09-2.81c-1.8-2.64-2.61-3.58-4.46-5.94-4.91-6.27-7.11-7.93-7.12-8.2s4.24-4.83,7.12-8.53c1.5-1.92,3.35-4.3,4.46-6A16.92,16.92,0,0,1,71.37,57.35Z" />
     <path
-        android:pathData="M23.19,42.83A6.2,6.2 0,0 1,24.05 44c0.74,1.15 1.32,1.79 1.88,2.53C27.77,49 29,50 29,50.14a34.34,34.34 0,0 0,-3 3.46c-0.71,1 -1.39,1.79 -1.88,2.5a9.66,9.66 0,0 1,-0.86 1.18,5.84 5.84,0 0,1 -0.88,-1.18c-0.76,-1.11 -1.1,-1.51 -1.88,-2.5 -2.07,-2.64 -3,-3.34 -3,-3.46s1.79,-2 3,-3.59c0.63,-0.81 1.41,-1.81 1.88,-2.53A7.13,7.13 0,0 1,23.19 42.83Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M157,231a6.2,6.2 0,0 1,0.86 1.18c0.74,1.15 1.32,1.79 1.88,2.53 1.84,2.43 3,3.49 3,3.59a34.34,34.34 0,0 0,-3 3.46c-0.71,1 -1.39,1.79 -1.88,2.5a9.66,9.66 0,0 1,-0.86 1.18,5.84 5.84,0 0,1 -0.88,-1.18c-0.76,-1.11 -1.1,-1.51 -1.88,-2.5 -2.07,-2.64 -3,-3.34 -3,-3.46s1.79,-2 3,-3.59c0.63,-0.81 1.41,-1.81 1.88,-2.53A7.13,7.13 0,0 1,157 231Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M71.44,133.1h4.32a11.22,11.22 0,0 0,4.32 -0.72,7.31 7.31,0 0,0 2.95,-2.3l27.34,-34.6a9.92,9.92 0,0 1,3.6 -3,11.54 11.54,0 0,1 4.76,-0.86h15.9l-33.37,41.18a30.15,30.15 0,0 1,-3 3.22,13.75 13.75,0 0,1 -3.08,2.12 13.62,13.62 0,0 1,4.08 2.33,21.57 21.57,0 0,1 3.53,3.84l34.4,46.39H120.84a10.12,10.12 0,0 1,-4.9 -0.92,7.66 7.66,0 0,1 -2.71,-2.71l-28,-36.59a8.31,8.31 0,0 0,-3.08 -2.57,12 12,0 0,0 -4.87,-0.79H71.44v43.58H53V91.51H71.44Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M19.42,25.92h0.88a2.28,2.28 0,0 0,0.88 -0.15,1.49 1.49,0 0,0 0.6,-0.47l5.59,-7.07a2,2 0,0 1,0.73 -0.62,2.34 2.34,0 0,1 1,-0.18h3.25l-6.82,8.41a6.17,6.17 0,0 1,-0.62 0.66,2.81 2.81,0 0,1 -0.63,0.43 2.78,2.78 0,0 1,0.83 0.48,4.4 4.4,0 0,1 0.72,0.78l7,9.48H29.52a2.06,2.06 0,0 1,-1 -0.19,1.55 1.55,0 0,1 -0.55,-0.55l-5.73,-7.48a1.71,1.71 0,0 0,-0.63 -0.53,2.47 2.47,0 0,0 -1,-0.16H19.42v8.9H15.66V17.42h3.77Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M160.47,262.27h-0.88a2.29,2.29 0,0 0,-0.88 0.15,1.49 1.49,0 0,0 -0.6,0.47L152.52,270a2,2 0,0 1,-0.73 0.62,2.37 2.37,0 0,1 -1,0.17h-3.25l6.82,-8.41a6.16,6.16 0,0 1,0.62 -0.66,2.83 2.83,0 0,1 0.63,-0.43 2.77,2.77 0,0 1,-0.83 -0.48,4.36 4.36,0 0,1 -0.72,-0.78l-7,-9.48h3.33a2.06,2.06 0,0 1,1 0.19,1.57 1.57,0 0,1 0.55,0.55l5.73,7.48a1.71,1.71 0,0 0,0.63 0.53,2.47 2.47,0 0,0 1,0.16h1.19v-8.9h3.77v20.26h-3.77Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M71.44,133.1h4.32a11.22,11.22,0,0,0,4.32-0.72,7.31,7.31,0,0,0,2.95-2.3l27.34-34.6a9.92,9.92,0,0,1,3.6-3,11.54,11.54,0,0,1,4.76-0.86h15.9l-33.37,41.18a30.15,30.15,0,0,1-3,3.22,13.75,13.75,0,0,1-3.08,2.12,13.62,13.62,0,0,1,4.08,2.33,21.57,21.57,0,0,1,3.53,3.84l34.4,46.39H120.84a10.12,10.12,0,0,1-4.9-0.92,7.66,7.66,0,0,1-2.71-2.71l-28-36.59a8.31,8.31,0,0,0-3.08-2.57,12,12,0,0,0-4.87-0.79H71.44v43.58H53V91.51H71.44Z" />
 </vector>
