--- a/app/src/main/res/drawable/c13ofspades.xml
+++ b/app/src/main/res/drawable/c13ofspades.xml
@@ -1,29 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,4H4V284h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M -0.02 0.05 H 179.72 V 287.96 H -0.02 V 0.05 Z" />
     <path
-        android:pathData="M78,57.17c0.21,0 4.35,4.79 6.53,6.76s7.55,7.15 8.43,8.28a7.85,7.85 0,0 1,1.58 4.07,9.3 9.3,0 0,1 -1.71,6.2 8.11,8.11 0,0 1,-6.09 3.59,8.45 8.45,0 0,1 -7.2,-2.5 14.66,14.66 0,0 0,2.41 4.92,15 15,0 0,0 2.35,2.34 0.48,0.48 0,0 1,0 0.64H71.58a0.42,0.42 0,0 1,0 -0.71,23.18 23.18,0 0,0 2.27,-2.27c1.17,-1.4 2.68,-4.86 2.47,-4.92a8.62,8.62 0,0 1,-5.76 2.53A9.58,9.58 0,0 1,63 82.48a8.64,8.64 0,0 1,-1.6 -6.21A7.59,7.59 0,0 1,63 72c1.17,-1.45 7,-6.84 8.22,-8S77.76,57.17 78,57.17Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M78,57.17c0.21,0,4.35,4.79,6.53,6.76s7.55,7.15,8.43,8.28a7.85,7.85,0,0,1,1.58,4.07,9.3,9.3,0,0,1-1.71,6.2,8.11,8.11,0,0,1-6.09,3.59,8.45,8.45,0,0,1-7.2-2.5,14.66,14.66,0,0,0,2.41,4.92,15,15,0,0,0,2.35,2.34 0.48 0.48,0,0,1,0,0.64H71.58a0.42 0.42 ,0,0,1,0-0.71,23.18,23.18,0,0,0,2.27-2.27c1.17-1.4,2.68-4.86,2.47-4.92a8.62,8.62,0,0,1-5.76,2.53A9.58,9.58,0,0,1,63,82.48a8.64,8.64,0,0,1-1.6-6.21A7.59,7.59,0,0,1,63,72c1.17-1.45,7-6.84,8.22-8S77.76,57.17,78,57.17Z" />
     <path
-        android:pathData="M23.22,42.77c0.09,0 1.81,2 2.72,2.82s3.15,3 3.52,3.45a3.28,3.28 0,0 1,0.66 1.7,3.88 3.88,0 0,1 -0.71,2.59 3.38,3.38 0,0 1,-2.54 1.5,3.52 3.52,0 0,1 -3,-1 6.11,6.11 0,0 0,1 2.05,6.28 6.28,0 0,0 1,1 0.2,0.2 0,0 1,0 0.27H20.55a0.18,0.18 0,0 1,0 -0.3,9.67 9.67,0 0,0 0.95,-0.95 6.28,6.28 0,0 0,1 -2.05,3.59 3.59,0 0,1 -2.4,1.05A4,4 0,0 1,17 53.33a3.6,3.6 0,0 1,-0.67 -2.59A3.16,3.16 0,0 1,17 49c0.49,-0.61 2.9,-2.85 3.43,-3.33S23.13,42.77 23.22,42.77Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M157,246.55c-0.09,0 -1.81,-2 -2.72,-2.82s-3.15,-3 -3.52,-3.45a3.28,3.28 0,0 1,-0.66 -1.7,3.88 3.88,0 0,1 0.71,-2.59 3.38,3.38 0,0 1,2.54 -1.5,3.52 3.52,0 0,1 3,1 6.11,6.11 0,0 0,-1 -2.05,6.28 6.28,0 0,0 -1,-1 0.2,0.2 0,0 1,0 -0.27h5.28a0.18,0.18 0,0 1,0 0.3,9.67 9.67,0 0,0 -0.95,0.95 6.28,6.28 0,0 0,-1 2.05,3.59 3.59,0 0,1 2.4,-1.05 4,4 0,0 1,3.16 1.51,3.6 3.6,0 0,1 0.67,2.59 3.16,3.16 0,0 1,-0.69 1.77c-0.49,0.61 -2.9,2.85 -3.43,3.33S157,246.55 157,246.55Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M71.6,133h4.32a11.22,11.22 0,0 0,4.32 -0.72,7.31 7.31,0 0,0 2.95,-2.3l27.34,-34.6a9.92,9.92 0,0 1,3.6 -3,11.54 11.54,0 0,1 4.76,-0.86h15.9L101.4,132.65a30.15,30.15 0,0 1,-3 3.22A13.75,13.75 0,0 1,95.3 138a13.62,13.62 0,0 1,4.08 2.33,21.57 21.57,0 0,1 3.53,3.84l34.4,46.39H121a10.12,10.12 0,0 1,-4.9 -0.92,7.66 7.66,0 0,1 -2.71,-2.71l-28,-36.59a8.31,8.31 0,0 0,-3.08 -2.57,12 12,0 0,0 -4.87,-0.79H71.6v43.58H53.16V91.4H71.6Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M19.47,25.89h0.88a2.28,2.28 0,0 0,0.88 -0.15,1.49 1.49,0 0,0 0.6,-0.47l5.59,-7.07a2,2 0,0 1,0.74 -0.62,2.35 2.35,0 0,1 1,-0.18h3.25l-6.82,8.41a6.07,6.07 0,0 1,-0.62 0.66,2.83 2.83,0 0,1 -0.63,0.43 2.76,2.76 0,0 1,0.83 0.48,4.37 4.37,0 0,1 0.72,0.78l7,9.48H29.57a2.07,2.07 0,0 1,-1 -0.19,1.57 1.57,0 0,1 -0.55,-0.55l-5.73,-7.48a1.71,1.71 0,0 0,-0.63 -0.53,2.46 2.46,0 0,0 -1,-0.16H19.47v8.9H15.71V17.4h3.77Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M160.54,263.32h-0.88a2.29,2.29 0,0 0,-0.88 0.15,1.49 1.49,0 0,0 -0.6,0.47L152.59,271a2,2 0,0 1,-0.73 0.62,2.37 2.37,0 0,1 -1,0.17h-3.25l6.82,-8.41a6.16,6.16 0,0 1,0.62 -0.66,2.83 2.83,0 0,1 0.63,-0.43 2.77,2.77 0,0 1,-0.83 -0.48,4.36 4.36,0 0,1 -0.72,-0.78l-7,-9.48h3.33a2.06,2.06 0,0 1,1 0.19,1.57 1.57,0 0,1 0.55,0.55l5.73,7.48a1.71,1.71 0,0 0,0.63 0.53,2.47 2.47,0 0,0 1,0.16h1.19v-8.9h3.77v20.26h-3.77Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M71.6,133h4.32a11.22,11.22,0,0,0,4.32-0.72,7.31,7.31,0,0,0,2.95-2.3l27.34-34.6a9.92,9.92,0,0,1,3.6-3,11.54,11.54,0,0,1,4.76-0.86h15.9L101.4,132.65a30.15,30.15,0,0,1-3,3.22A13.75,13.75,0,0,1,95.3,138a13.62,13.62,0,0,1,4.08,2.33,21.57,21.57,0,0,1,3.53,3.84l34.4,46.39H121a10.12,10.12,0,0,1-4.9-0.92,7.66,7.66,0,0,1-2.71-2.71l-28-36.59a8.31,8.31,0,0,0-3.08-2.57,12,12,0,0,0-4.87-0.79H71.6v43.58H53.16V91.4H71.6Z" />
 </vector>
