--- a/app/src/main/res/drawable/c1ofhearts.xml
+++ b/app/src/main/res/drawable/c1ofhearts.xml
@@ -1,26 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="180dp"
     android:height="288dp"
-    android:viewportHeight="288.0"
-    android:viewportWidth="180.0">
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
         android:fillColor="#fff8f0"
-        android:pathData="M3.75,4.13h172.6v279.82h-172.6z"
         android:strokeColor="#444"
-        android:strokeWidth="8" />
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M -0.04 0.07 H 180.19 V 287.84 H -0.04 V 0.07 Z" />
     <path
         android:fillColor="#dd5050"
-        android:pathData="M138.48,190.84H124.23a6.23,6.23 0,0 1,-3.94 -1.2,6.81 6.81,0 0,1 -2.23,-3l-7.4,-20.21h-41l-7.4,20.21a6.48,6.48 0,0 1,-2.16 2.88,6.07 6.07,0 0,1 -3.94,1.3H41.81L80.72,91.76H99.57ZM74.35,153.43h31.59l-12.06,-33q-0.82,-2.19 -1.82,-5.17t-2,-6.48q-1,3.49 -1.88,6.51t-1.82,5.28Z" />
+        android:pathData="M138.48,189.1H124.23a6.23,6.23,0,0,1-3.94-1.2,6.81,6.81,0,0,1-2.23-3l-7.4-20.21h-41l-7.4,20.21a6.48,6.48,0,0,1-2.16,2.88,6.07,6.07,0,0,1-3.94,1.3H41.81L80.72,90H99.57ZM74.35,151.69h31.59l-12.06-33q-0.82-2.19-1.82-5.17t-2-6.48q-1,3.49-1.88,6.51t-1.82,5.28Z" />
     <path
         android:fillColor="#dd5050"
-        android:pathData="M20,45A5.63,5.63 0,0 1,21 43.59a3.74,3.74 0,0 1,2.13 -0.8,3.36 3.36,0 0,1 2.35,0.8 4.19,4.19 0,0 1,1.12 2A5.89,5.89 0,0 1,26.27 49a17.94,17.94 0,0 1,-3.08 4.32c-0.67,0.75 -1.68,1.93 -2.15,2.49s-0.91,1.25 -1.05,1.25 -0.7,-0.79 -1.1,-1.25 -1.37,-1.67 -2.13,-2.52a23.21,23.21 0,0 1,-2.08 -2.58A8.59,8.59 0,0 1,13.76 49a6,6 0,0 1,-0.33 -3.42,3.41 3.41,0 0,1 3.33,-2.8 3.62,3.62 0,0 1,2.13 0.77A4.58,4.58 0,0 1,20 45Z" />
-    <path
-        android:fillColor="#dd5050"
-        android:pathData="M90,177.53c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88 9.91,9.91 0,0 1,2.66 4.8,13.93 13.93,0 0,1 -0.87,8.09c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95 -1.66,-1.88 -2.6,-2.95 -3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11,20.33 20.33,0 0,1 -2.2,-4.07 14.26,14.26 0,0 1,-0.77 -8.09,8.08 8.08,0 0,1 7.88,-6.61 8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,90 177.53Z" />
-    <path
-        android:fillColor="#dd5050"
-        android:pathData="M158,243.28a5.63,5.63 0,0 1,-1.05 1.43,3.74 3.74,0 0,1 -2.13,0.8 3.36,3.36 0,0 1,-2.35 -0.8,4.19 4.19,0 0,1 -1.12,-2 5.89,5.89 0,0 1,0.37 -3.42,17.94 17.94,0 0,1 3.08,-4.32c0.67,-0.75 1.68,-1.93 2.15,-2.49s0.91,-1.25 1.05,-1.25 0.7,0.79 1.1,1.25 1.37,1.67 2.13,2.52a23.21,23.21 0,0 1,2.08 2.58,8.59 8.59,0 0,1 0.93,1.72 6,6 0,0 1,0.33 3.42,3.41 3.41,0 0,1 -3.33,2.8 3.62,3.62 0,0 1,-2.13 -0.77A4.58,4.58 0,0 1,158 243.28Z" />
-    <path
-        android:fillColor="#dd5050"
-        android:pathData="M29.86,37.75H26.95a1.27,1.27 0,0 1,-0.8 -0.25,1.39 1.39,0 0,1 -0.46,-0.61l-1.51,-4.13H15.79L14.28,36.9a1.32,1.32 0,0 1,-0.44 0.59,1.24 1.24,0 0,1 -0.81,0.27H10.11l8,-20.24h3.85ZM16.76,30.1h6.45l-2.46,-6.73q-0.17,-0.45 -0.37,-1.06T20,21q-0.2,0.71 -0.39,1.33t-0.37,1.08Z" />
+        android:pathData="M90,177.53c0.16,0,1-2.24,2.49-3.38a8.85,8.85,0,0,1,5-1.88,7.94,7.94,0,0,1,5.55,1.88,9.91,9.91,0,0,1,2.66,4.8,13.93,13.93,0,0,1-0.87,8.09c-1.6,3.92-5.7,8.46-7.28,10.23s-4,4.57-5.09,5.9-2.16,2.95-2.49,2.95-1.66-1.88-2.6-2.95-3.23-4-5-6a54.9,54.9,0,0,1-4.91-6.11,20.33,20.33,0,0,1-2.2-4.07,14.26,14.26,0,0,1-0.77-8.09,8.08,8.08,0,0,1,7.88-6.61,8.56,8.56,0,0,1,5,1.81A10.84,10.84,0,0,1,90,177.53Z" />
 </vector>
