--- a/app/src/main/res/drawable/c1ofspades.xml
+++ b/app/src/main/res/drawable/c1ofspades.xml
@@ -1,29 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,284H4V4h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M -0.05 -0.04 H 180.12 V 287.87 H -0.05 V -0.04 Z" />
     <path
-        android:pathData="M31.25,37.49L28.34,37.49a1.27,1.27 0,0 1,-0.8 -0.25,1.39 1.39,0 0,1 -0.46,-0.61L25.56,32.5L17.18,32.5l-1.51,4.13a1.32,1.32 0,0 1,-0.44 0.59,1.24 1.24,0 0,1 -0.81,0.27L11.49,37.49l8,-20.24L23.3,17.25ZM18.15,29.85L24.6,29.85l-2.46,-6.73q-0.17,-0.45 -0.37,-1.06t-0.4,-1.32q-0.2,0.71 -0.39,1.33t-0.37,1.08Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M89.77,172c0.21,0,4.35,4.79,6.53,6.76s7.55,7.15,8.43,8.28a7.85,7.85,0,0,1,1.58,4.07,9.3,9.3,0,0,1-1.71,6.2,8.11,8.11,0,0,1-6.09,3.59,8.45,8.45,0,0,1-7.2-2.5,14.66,14.66,0,0,0,2.41,4.92,15,15,0,0,0,2.35,2.34 0.48 0.48,0,0,1,0,0.64H83.38a0.42 0.42 ,0,0,1,0-0.71,23.18,23.18,0,0,0,2.27-2.27c1.17-1.4,2.68-4.86,2.47-4.92a8.62,8.62,0,0,1-5.76,2.53,9.58,9.58,0,0,1-7.58-3.62,8.64,8.64,0,0,1-1.6-6.21,7.59,7.59,0,0,1,1.65-4.25c1.17-1.45,7-6.84,8.22-8S89.56,172,89.77,172Z" />
     <path
-        android:pathData="M21.4,42.49c0.09,0 1.81,2 2.72,2.82s3.15,3 3.52,3.45a3.28,3.28 0,0 1,0.66 1.7A3.88,3.88 0,0 1,27.59 53,3.38 3.38,0 0,1 25,54.54a3.52,3.52 0,0 1,-3 -1,6.11 6.11,0 0,0 1,2.05 6.28,6.28 0,0 0,1 1,0.2 0.2,0 0,1 0,0.27H18.73a0.18,0.18 0,0 1,0 -0.3,9.67 9.67,0 0,0 0.95,-0.95 6.28,6.28 0,0 0,1 -2.05,3.59 3.59,0 0,1 -2.4,1.05A4,4 0,0 1,15.15 53a3.6,3.6 0,0 1,-0.67 -2.59,3.16 3.16,0 0,1 0.69,-1.77c0.49,-0.61 2.9,-2.85 3.43,-3.33S21.31,42.49 21.4,42.49Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M159.08,246.56c-0.09,0 -1.81,-2 -2.72,-2.82s-3.15,-3 -3.52,-3.45a3.28,3.28 0,0 1,-0.66 -1.7,3.88 3.88,0 0,1 0.71,-2.59 3.38,3.38 0,0 1,2.54 -1.5,3.52 3.52,0 0,1 3,1 6.11,6.11 0,0 0,-1 -2.05,6.28 6.28,0 0,0 -1,-1 0.2,0.2 0,0 1,0 -0.27h5.28a0.18,0.18 0,0 1,0 0.3,9.67 9.67,0 0,0 -0.95,0.95 6.28,6.28 0,0 0,-1 2.05,3.59 3.59,0 0,1 2.4,-1.05 4,4 0,0 1,3.16 1.51,3.6 3.6,0 0,1 0.67,2.59 3.16,3.16 0,0 1,-0.69 1.77c-0.49,0.61 -2.9,2.85 -3.43,3.33S159.17,246.56 159.08,246.56Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M149.07,251.39L152,251.39a1.26,1.26 0,0 1,0.8 0.25,1.37 1.37,0 0,1 0.46,0.61l1.51,4.13h8.39l1.51,-4.13a1.33,1.33 0,0 1,0.44 -0.59,1.24 1.24,0 0,1 0.8,-0.27h2.93l-8,20.24L157,271.63ZM162.17,259.03h-6.45l2.46,6.73q0.17,0.45 0.37,1.06t0.4,1.32c0.13,-0.47 0.26,-0.92 0.38,-1.33s0.25,-0.77 0.37,-1.08Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M89.77,172c0.21,0 4.35,4.79 6.53,6.76s7.55,7.15 8.43,8.28a7.85,7.85 0,0 1,1.58 4.07,9.3 9.3,0 0,1 -1.71,6.2 8.11,8.11 0,0 1,-6.09 3.59,8.45 8.45,0 0,1 -7.2,-2.5 14.66,14.66 0,0 0,2.41 4.92,15 15,0 0,0 2.35,2.34 0.48,0.48 0,0 1,0 0.64H83.38a0.42,0.42 0,0 1,0 -0.71,23.18 23.18,0 0,0 2.27,-2.27c1.17,-1.4 2.68,-4.86 2.47,-4.92a8.62,8.62 0,0 1,-5.76 2.53,9.58 9.58,0 0,1 -7.58,-3.62 8.64,8.64 0,0 1,-1.6 -6.21,7.59 7.59,0 0,1 1.65,-4.25c1.17,-1.45 7,-6.84 8.22,-8S89.56,172 89.77,172Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M138.48,190.34H124.23a6.23,6.23 0,0 1,-3.94 -1.2,6.81 6.81,0 0,1 -2.23,-3l-7.4,-20.21h-41l-7.4,20.21A6.48,6.48 0,0 1,60.06 189a6.07,6.07 0,0 1,-3.94 1.3H41.8L80.72,91.26H99.56ZM74.35,152.93h31.59L93.88,120q-0.82,-2.19 -1.82,-5.17t-2,-6.48q-1,3.5 -1.88,6.51t-1.82,5.28Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M138.18,188.89H123.93a6.23,6.23,0,0,1-3.94-1.2,6.81,6.81,0,0,1-2.23-3l-7.4-20.21h-41l-7.4,20.21a6.48,6.48,0,0,1-2.16,2.88,6.07,6.07,0,0,1-3.94,1.3H41.5L80.42,89.81H99.26ZM74,151.48h31.59l-12.06-33q-0.82-2.19-1.82-5.17t-2-6.48q-1,3.5-1.88,6.51t-1.82,5.28Z" />
 </vector>
