--- a/app/src/main/res/drawable/c4ofdiamonds.xml
+++ b/app/src/main/res/drawable/c4ofdiamonds.xml
@@ -1,35 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,4H4V284h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M 0.08 -0.01 H 180.15 V 287.91 H 0.08 V -0.01 Z" />
     <path
-        android:pathData="M62.38,61.36a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,62.38 61.36Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M37.19,99.46a14.71,14.71,0,0,1,2,2.81c1.75,2.72,3.14,4.26,4.46,6,4.37,5.77,7.22,8.29,7.22,8.53a81.48,81.48,0,0,0-7.22,8.2c-1.68,2.26-3.3,4.24-4.46,5.94a22.93,22.93,0,0,1-2,2.81,13.86,13.86,0,0,1-2.09-2.81c-1.8-2.64-2.61-3.58-4.46-5.94-4.91-6.27-7.11-7.93-7.12-8.2s4.24-4.83,7.12-8.53c1.5-1.92,3.35-4.3,4.46-6A16.92,16.92,0,0,1,37.19,99.46Z" />
     <path
-        android:pathData="M116.31,61.4a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6C127.17,76 130,78.5 130,78.74a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,116.31 61.4Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M143.41,154.27a14.71,14.71,0,0,1,2,2.81c1.75,2.72,3.14,4.26,4.46,6,4.37,5.77,7.22,8.29,7.22,8.53a81.48,81.48,0,0,0-7.22,8.2c-1.68,2.26-3.3,4.24-4.46,5.94a22.93,22.93,0,0,1-2,2.81,13.86,13.86,0,0,1-2.09-2.81c-1.8-2.64-2.61-3.58-4.46-5.94-4.91-6.27-7.11-7.93-7.12-8.2s4.24-4.83,7.12-8.53c1.5-1.92,3.35-4.3,4.46-6A16.92,16.92,0,0,1,143.41,154.27Z" />
     <path
-        android:pathData="M62.37,190.49a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81A13.86,13.86 0,0 1,60.28 222c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,62.37 190.49Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M52.21,62.11h7.5V68a2.06,2.06,0,0,1-0.54,1.42,2,2,0,0,1-1.57 0.6 h-5.4V84.57h-8.9V70H18.18a2.78,2.78,0,0,1-1.81-0.64,2.75,2.75,0,0,1-1-1.59l-1-5.15,28.23-37.7h9.64Zm-8.9-19.49q0-1.32 0.08 -2.84t0.29-3.17l-18.5,25.5H43.31Z" />
     <path
-        android:pathData="M116.23,190.41a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,116.23 190.41Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M21.32,42.9a6.2,6.2 0,0 1,0.86 1.18c0.74,1.15 1.32,1.79 1.88,2.53 1.84,2.43 3,3.49 3,3.59a34.34,34.34 0,0 0,-3 3.46c-0.71,1 -1.39,1.79 -1.88,2.5a9.66,9.66 0,0 1,-0.86 1.18,5.84 5.84,0 0,1 -0.88,-1.18c-0.76,-1.11 -1.1,-1.51 -1.88,-2.5 -2.07,-2.64 -3,-3.34 -3,-3.46s1.79,-2 3,-3.59c0.63,-0.81 1.41,-1.81 1.88,-2.53A7.13,7.13 0,0 1,21.32 42.9Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M158.63,231a6.2,6.2 0,0 1,0.86 1.18c0.74,1.15 1.32,1.79 1.88,2.53 1.84,2.43 3,3.49 3,3.59a34.34,34.34 0,0 0,-3 3.46c-0.71,1 -1.39,1.79 -1.88,2.5a9.66,9.66 0,0 1,-0.86 1.18,5.84 5.84,0 0,1 -0.88,-1.18c-0.76,-1.11 -1.1,-1.51 -1.88,-2.5 -2.07,-2.64 -3,-3.34 -3,-3.46s1.79,-2 3,-3.59c0.63,-0.81 1.41,-1.81 1.88,-2.53A7.13,7.13 0,0 1,158.63 231Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M26.74,30.07h2.55v2a0.7,0.7 0,0 1,-0.18 0.48,0.68 0.68,0 0,1 -0.53,0.2L26.74,32.75L26.74,37.7h-3L23.74,32.75L15.17,32.75a1,1 0,0 1,-0.62 -0.22,0.93 0.93,0 0,1 -0.34,-0.54l-0.35,-1.75 9.59,-12.81h3.28ZM23.74,23.45q0,-0.45 0,-1t0.1,-1.08l-6.29,8.67h6.16Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M153.32,258.2h-2.55v-2a0.7,0.7 0,0 1,0.18 -0.48,0.68 0.68,0 0,1 0.53,-0.2h1.83v-4.94h3v4.94h8.54a1,1 0,0 1,1 0.76l0.35,1.75 -9.59,12.81h-3.28ZM156.32,264.82q0,0.45 0,1t-0.1,1.08l6.29,-8.67h-6.16Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M128.43,226.07h-7.52v-5.91a2.07,2.07,0,0,1,0.54-1.43,2,2,0,0,1,1.57-0.6h5.41V203.56h8.92v14.58h25.2a2.79,2.79,0,0,1,1.82 0.64 ,2.76,2.76,0,0,1,1,1.59l1,5.16-28.3,37.8h-9.67Zm8.92,19.54q0,1.32-0.08,2.85t-0.29,3.18l18.55-25.57H137.36Z" />
 </vector>
