--- a/app/src/main/res/drawable/c4ofspades.xml
+++ b/app/src/main/res/drawable/c4ofspades.xml
@@ -1,35 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,4H4V284h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M 0.09 0.15 H 180.06 V 288.06 H 0.09 V 0.15 Z" />
     <path
-        android:pathData="M26.71,30.12h2.55v2a0.7,0.7 0,0 1,-0.18 0.48,0.68 0.68,0 0,1 -0.53,0.2L26.71,32.8v4.94h-3L23.71,32.81L15.15,32.81a1,1 0,0 1,-0.62 -0.22,0.93 0.93,0 0,1 -0.34,-0.54l-0.35,-1.75 9.59,-12.81h3.28ZM23.71,23.5q0,-0.45 0,-1t0.1,-1.08l-6.29,8.67h6.16Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M51.95,62h7.47v5.87a2.05,2.05,0,0,1-0.53,1.42,2,2,0,0,1-1.56 0.59 H51.95V84.36H43.08V69.87H18a2.77,2.77,0,0,1-1.81-0.64,2.74,2.74,0,0,1-1-1.58l-1-5.13L42.34,25h9.61ZM43.08,42.57q0-1.31 0.08 -2.83t0.29-3.16L25,62H43.08Z" />
     <path
-        android:pathData="M21.21,42.84c0.09,0 1.81,2 2.72,2.82s3.15,3 3.52,3.45a3.28,3.28 0,0 1,0.66 1.7,3.88 3.88,0 0,1 -0.71,2.59 3.38,3.38 0,0 1,-2.54 1.5,3.52 3.52,0 0,1 -3,-1 6.11,6.11 0,0 0,1 2.05,6.28 6.28,0 0,0 1,1 0.2,0.2 0,0 1,0 0.27H18.55a0.18,0.18 0,0 1,0 -0.3,9.67 9.67,0 0,0 0.95,-0.95 6.28,6.28 0,0 0,1 -2.05,3.59 3.59,0 0,1 -2.4,1.05A4,4 0,0 1,15 53.4a3.6,3.6 0,0 1,-0.67 -2.59A3.16,3.16 0,0 1,15 49c0.49,-0.61 2.9,-2.85 3.43,-3.33S21.13,42.85 21.21,42.84Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M127.9,226.84h-7.57v-5.95a2.08,2.08,0,0,1,0.54-1.43,2,2,0,0,1,1.58-0.6h5.45V204.18h9v14.68h25.36a2.81,2.81,0,0,1,1.83 0.64 ,2.78,2.78,0,0,1,1,1.6l1,5.2-28.48,38H127.9Zm9,19.67q0,1.33-0.08,2.87t-0.29,3.2l18.67-25.74H136.88Z" />
     <path
-        android:pathData="M158.62,246.66c-0.09,0 -1.81,-2 -2.72,-2.82s-3.15,-3 -3.52,-3.45a3.28,3.28 0,0 1,-0.66 -1.7,3.88 3.88,0 0,1 0.71,-2.59 3.38,3.38 0,0 1,2.54 -1.5,3.52 3.52,0 0,1 3,1 6.11,6.11 0,0 0,-1 -2.05,6.28 6.28,0 0,0 -1,-1 0.2,0.2 0,0 1,0 -0.27h5.28a0.18,0.18 0,0 1,0 0.3,9.67 9.67,0 0,0 -0.95,0.95 6.28,6.28 0,0 0,-1 2.05,3.59 3.59,0 0,1 2.4,-1.05 4,4 0,0 1,3.16 1.51,3.6 3.6,0 0,1 0.67,2.59 3.16,3.16 0,0 1,-0.69 1.77c-0.49,0.61 -2.9,2.85 -3.43,3.33S158.7,246.65 158.62,246.66Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M37.1,99.16c0.21,0,4.35,4.79,6.53,6.76s7.55,7.15,8.43,8.28a7.85,7.85,0,0,1,1.58,4.07,9.3,9.3,0,0,1-1.71,6.2,8.11,8.11,0,0,1-6.09,3.59,8.45,8.45,0,0,1-7.2-2.5,14.66,14.66,0,0,0,2.41,4.92,15,15,0,0,0,2.35,2.34 0.48 0.48,0,0,1,0,0.64H30.71a0.42 0.42 ,0,0,1,0-0.71A23.18,23.18,0,0,0,33,130.48c1.17-1.4,2.68-4.86,2.47-4.92a8.62,8.62,0,0,1-5.76,2.53,9.58,9.58,0,0,1-7.58-3.62,8.64,8.64,0,0,1-1.6-6.21A7.59,7.59,0,0,1,22.17,114c1.17-1.45,7-6.84,8.22-8S36.89,99.16,37.1,99.16Z" />
     <path
-        android:pathData="M153.28,259.32h-2.55v-2a0.7,0.7 0,0 1,0.18 -0.48,0.68 0.68,0 0,1 0.53,-0.2h1.83v-4.94h3v4.94h8.54a1,1 0,0 1,1 0.76l0.35,1.75 -9.59,12.81h-3.28ZM156.28,265.94q0,0.45 0,1t-0.1,1.08l6.29,-8.67L156.3,259.35Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M62.38,63.19c0.21,0 4.35,4.79 6.53,6.76s7.55,7.15 8.43,8.28a7.85,7.85 0,0 1,1.58 4.07,9.3 9.3,0 0,1 -1.71,6.2 8.11,8.11 0,0 1,-6.09 3.59,8.45 8.45,0 0,1 -7.2,-2.5 14.66,14.66 0,0 0,2.41 4.92,15 15,0 0,0 2.35,2.34 0.48,0.48 0,0 1,0 0.64H56a0.42,0.42 0,0 1,0 -0.71,23.18 23.18,0 0,0 2.27,-2.27c1.17,-1.4 2.68,-4.86 2.47,-4.92A8.62,8.62 0,0 1,55 92.12a9.58,9.58 0,0 1,-7.58 -3.62,8.64 8.64,0 0,1 -1.6,-6.21A7.59,7.59 0,0 1,47.46 78c1.17,-1.45 7,-6.84 8.22,-8S62.18,63.19 62.38,63.19Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M116.24,63.19c0.21,0 4.35,4.79 6.53,6.76s7.55,7.15 8.43,8.28a7.85,7.85 0,0 1,1.58 4.07,9.3 9.3,0 0,1 -1.71,6.2A8.11,8.11 0,0 1,125 92.08a8.45,8.45 0,0 1,-7.2 -2.5,14.66 14.66,0 0,0 2.41,4.92 15,15 0,0 0,2.35 2.34,0.48 0.48,0 0,1 0,0.64H109.86a0.42,0.42 0,0 1,0 -0.71,23.18 23.18,0 0,0 2.27,-2.27c1.17,-1.4 2.68,-4.86 2.47,-4.92a8.62,8.62 0,0 1,-5.76 2.53,9.58 9.58,0 0,1 -7.58,-3.62 8.64,8.64 0,0 1,-1.6 -6.21A7.59,7.59 0,0 1,101.32 78c1.17,-1.45 7,-6.84 8.22,-8S116,63.19 116.24,63.19Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M116.32,225.22c-0.21,0 -4.35,-4.79 -6.53,-6.76s-7.55,-7.15 -8.43,-8.28a7.85,7.85 0,0 1,-1.58 -4.07,9.3 9.3,0 0,1 1.71,-6.2 8.11,8.11 0,0 1,6.09 -3.59,8.45 8.45,0 0,1 7.2,2.5 14.66,14.66 0,0 0,-2.41 -4.92,15 15,0 0,0 -2.35,-2.34 0.48,0.48 0,0 1,0 -0.64h12.67a0.42,0.42 0,0 1,0 0.71,23.18 23.18,0 0,0 -2.27,2.27c-1.17,1.4 -2.68,4.86 -2.47,4.92a8.62,8.62 0,0 1,5.76 -2.53,9.58 9.58,0 0,1 7.58,3.62 8.64,8.64 0,0 1,1.6 6.21,7.59 7.59,0 0,1 -1.65,4.25c-1.17,1.45 -7,6.84 -8.22,8S116.53,225.21 116.32,225.22Z"
-        android:fillColor="#444"/>
-    <path
-        android:pathData="M62.46,225.22c-0.21,0 -4.35,-4.79 -6.53,-6.76s-7.55,-7.15 -8.43,-8.28a7.85,7.85 0,0 1,-1.58 -4.07,9.3 9.3,0 0,1 1.71,-6.2 8.11,8.11 0,0 1,6.09 -3.59,8.45 8.45,0 0,1 7.2,2.5 14.66,14.66 0,0 0,-2.41 -4.92,15 15,0 0,0 -2.35,-2.34 0.48,0.48 0,0 1,0 -0.64H68.85a0.42,0.42 0,0 1,0 0.71,23.18 23.18,0 0,0 -2.27,2.27c-1.17,1.4 -2.68,4.86 -2.47,4.92a8.62,8.62 0,0 1,5.76 -2.53,9.58 9.58,0 0,1 7.58,3.62 8.64,8.64 0,0 1,1.6 6.21,7.59 7.59,0 0,1 -1.65,4.25c-1.17,1.45 -7,6.84 -8.22,8S62.67,225.21 62.46,225.22Z"
-        android:fillColor="#444"/>
+        android:fillColor="#444"
+        android:pathData="M142.8,189.24c-0.21,0-4.35-4.79-6.53-6.76s-7.55-7.15-8.43-8.28a7.85,7.85,0,0,1-1.58-4.07,9.3,9.3,0,0,1,1.71-6.2,8.11,8.11,0,0,1,6.09-3.59,8.45,8.45,0,0,1,7.2,2.5,14.66,14.66,0,0,0-2.41-4.92,15,15,0,0,0-2.35-2.34 0.48 0.48,0,0,1,0-0.64h12.67a0.42 0.42 ,0,0,1,0,0.71,23.18,23.18,0,0,0-2.27,2.27c-1.17,1.4-2.68,4.86-2.47,4.92a8.62,8.62,0,0,1,5.76-2.53,9.58,9.58,0,0,1,7.58,3.62,8.64,8.64,0,0,1,1.6,6.21,7.59,7.59,0,0,1-1.65,4.25c-1.17,1.45-7,6.84-8.22,8S143,189.24,142.8,189.24Z" />
 </vector>
