--- a/app/src/main/res/drawable/c7ofdiamonds.xml
+++ b/app/src/main/res/drawable/c7ofdiamonds.xml
@@ -1,44 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M176.05,4H4V284h172Z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M 0.01 -0.01 H 179.92 V 288.04 H 0.01 V -0.01 Z" />
     <path
-        android:pathData="M63.27,65.19a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6C74.14,79.77 77,82.28 77,82.53a81.48,81.48 0,0 0,-7.22 8.2C68.08,93 66.47,95 65.31,96.67a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2S53.85,77.7 56.73,74c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,63.27 65.19Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M143.82,154.66a14.71,14.71,0,0,1,2,2.81c1.75,2.72,3.14,4.26,4.46,6,4.37,5.77,7.22,8.29,7.22,8.53a81.48,81.48,0,0,0-7.22,8.2c-1.68,2.26-3.3,4.24-4.46,5.94a22.93,22.93,0,0,1-2,2.81,13.86,13.86,0,0,1-2.09-2.81c-1.8-2.64-2.61-3.58-4.46-5.94-4.91-6.27-7.11-7.93-7.12-8.2s4.24-4.83,7.12-8.53c1.5-1.92,3.35-4.3,4.46-6A16.92,16.92,0,0,1,143.82,154.66Z" />
     <path
-        android:pathData="M117.26,65.19a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,117.26 65.19Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M36,98.92a14.71,14.71,0,0,1,2,2.81c1.75,2.72,3.14,4.26,4.46,6,4.37,5.77,7.22,8.29,7.22,8.53a81.48,81.48,0,0,0-7.22,8.2c-1.68,2.26-3.3,4.24-4.46,5.94a22.93,22.93,0,0,1-2,2.81,13.86,13.86,0,0,1-2.09-2.81c-1.8-2.64-2.61-3.58-4.46-5.94-4.91-6.27-7.11-7.93-7.12-8.2s4.24-4.83,7.12-8.53c1.5-1.92,3.35-4.3,4.46-6A16.92,16.92,0,0,1,36,98.92Z" />
     <path
-        android:pathData="M63.33,126.88a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6C74.19,141.46 77,144 77,144.22a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,63.33 126.88Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M56.5,25.08v4.4a9.72,9.72,0,0,1-0.43,3.19,18.46,18.46,0,0,1-0.84,2L32.71,81.13a7,7,0,0,1-2,2.45,5.43,5.43,0,0,1-3.46,1H19.92L43,39.12a23.72,23.72,0,0,1,3.21-4.81H17.69A2.39,2.39,0,0,1,15.35,32V25.08Z" />
     <path
-        android:pathData="M117.29,127a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,117.29 127Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M63.37,190.48a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81A13.86,13.86 0,0 1,61.28 222c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,63.37 190.48Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M117.29,190.45a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81,13.86 13.86,0 0,1 -2.09,-2.81c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,117.29 190.45Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M90.06,99.51a14.71,14.71 0,0 1,2 2.81c1.75,2.72 3.14,4.26 4.46,6 4.37,5.77 7.22,8.29 7.22,8.53a81.48,81.48 0,0 0,-7.22 8.2c-1.68,2.26 -3.3,4.24 -4.46,5.94a22.93,22.93 0,0 1,-2 2.81A13.86,13.86 0,0 1,88 131c-1.8,-2.64 -2.61,-3.58 -4.46,-5.94 -4.91,-6.27 -7.11,-7.93 -7.12,-8.2s4.24,-4.83 7.12,-8.53c1.5,-1.92 3.35,-4.3 4.46,-6A16.92,16.92 0,0 1,90.06 99.51Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M21.45,42.91a6.2,6.2 0,0 1,0.86 1.18c0.74,1.15 1.32,1.79 1.88,2.53 1.84,2.43 3,3.49 3,3.59a34.34,34.34 0,0 0,-3 3.46c-0.71,1 -1.39,1.79 -1.88,2.5a9.66,9.66 0,0 1,-0.86 1.18,5.84 5.84,0 0,1 -0.88,-1.18c-0.76,-1.11 -1.1,-1.51 -1.88,-2.5 -2.07,-2.64 -3,-3.34 -3,-3.46s1.79,-2 3,-3.59c0.63,-0.81 1.41,-1.81 1.88,-2.53A7.13,7.13 0,0 1,21.45 42.91Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M159.12,231a6.2,6.2 0,0 1,0.86 1.18c0.74,1.15 1.32,1.79 1.88,2.53 1.84,2.43 3,3.49 3,3.59a34.34,34.34 0,0 0,-3 3.46c-0.71,1 -1.39,1.79 -1.88,2.5a9.66,9.66 0,0 1,-0.86 1.18,5.84 5.84,0 0,1 -0.88,-1.18c-0.76,-1.11 -1.1,-1.51 -1.88,-2.5 -2.07,-2.64 -3,-3.34 -3,-3.46s1.79,-2 3,-3.59c0.63,-0.81 1.41,-1.81 1.88,-2.53A7.13,7.13 0,0 1,159.12 231Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M29,17.57v1.5a3.29,3.29 0,0 1,-0.15 1.08,6.42 6.42,0 0,1 -0.29,0.69L20.88,36.63a2.39,2.39 0,0 1,-0.67 0.83,1.85 1.85,0 0,1 -1.18,0.34H16.53l7.84,-15.47a8.13,8.13 0,0 1,1.09 -1.64H15.77a0.81,0.81 0,0 1,-0.8 -0.8V17.57Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M151.28,270.71v-1.5a3.31,3.31 0,0 1,0.15 -1.08,6.14 6.14,0 0,1 0.29,-0.69l7.66,-15.79a2.37,2.37 0,0 1,0.67 -0.83,1.85 1.85,0 0,1 1.18,-0.34h2.51l-7.84,15.47a8.1,8.1 0,0 1,-1.09 1.64h9.69a0.81,0.81 0,0 1,0.8 0.8v2.34Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M123.24,263.16v-4.41a9.73,9.73,0,0,1,0.43-3.2,18.71,18.71,0,0,1,0.85-2L147.09,207a7,7,0,0,1,2-2.46,5.44,5.44,0,0,1,3.47-1h7.39l-23.11,45.59a23.77,23.77,0,0,1-3.22,4.83h28.55a2.4,2.4,0,0,1,2.35,2.35v6.89Z" />
 </vector>
