--- a/app/src/main/res/drawable/c7ofhearts.xml
+++ b/app/src/main/res/drawable/c7ofhearts.xml
@@ -1,44 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="180dp"
-        android:height="288dp"
-        android:viewportWidth="180.0"
-        android:viewportHeight="288.0">
+    android:width="180dp"
+    android:height="288dp"
+    android:viewportWidth="180"
+    android:viewportHeight="288">
+
     <path
-        android:pathData="M4.04,4.01h172.01v279.95h-172.01z"
-        android:strokeColor="#444"
         android:fillColor="#fff8f0"
-        android:strokeWidth="8"/>
+        android:strokeColor="#444"
+        android:strokeWidth="10"
+        android:strokeMiterLimit="10"
+        android:pathData="M -0.15 0.05 H 180.11 V 288.09 H -0.15 V 0.05 Z" />
     <path
-        android:pathData="M21.12,44.8a5.63,5.63 0,0 1,1.05 -1.43,3.74 3.74,0 0,1 2.13,-0.8 3.36,3.36 0,0 1,2.35 0.8,4.19 4.19,0 0,1 1.12,2 5.89,5.89 0,0 1,-0.37 3.42,17.94 17.94,0 0,1 -3.08,4.32c-0.67,0.75 -1.68,1.93 -2.15,2.49s-0.91,1.25 -1.05,1.25 -0.7,-0.79 -1.1,-1.25S18.65,54 17.9,53.12a23.21,23.21 0,0 1,-2.08 -2.58,8.59 8.59,0 0,1 -0.93,-1.72 6,6 0,0 1,-0.33 -3.42,3.41 3.41,0 0,1 3.33,-2.8 3.62,3.62 0,0 1,2.13 0.77A4.58,4.58 0,0 1,21.12 44.8Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M35.76,104.13c0.16,0,1-2.24,2.49-3.38a8.85,8.85,0,0,1,5-1.88,7.94,7.94,0,0,1,5.55,1.88,9.91,9.91,0,0,1,2.66,4.8,13.93,13.93,0,0,1-0.87,8.09c-1.6,3.92-5.7,8.46-7.28,10.23s-4,4.57-5.09,5.9-2.16,2.95-2.49,2.95-1.66-1.88-2.6-2.95-3.23-4-5-6a54.9,54.9,0,0,1-4.91-6.11,20.33,20.33,0,0,1-2.2-4.07,14.26,14.26,0,0,1-0.77-8.09,8.08,8.08,0,0,1,7.88-6.61,8.56,8.56,0,0,1,5,1.81A10.84,10.84,0,0,1,35.76,104.13Z" />
     <path
-        android:pathData="M63.1,68.27c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88 9.91,9.91 0,0 1,2.66 4.8A13.93,13.93 0,0 1,78 77.79c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95S61.44,95 60.5,93.92s-3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11,20.33 20.33,0 0,1 -2.2,-4.07 14.26,14.26 0,0 1,-0.77 -8.09,8.08 8.08,0 0,1 7.88,-6.61 8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,63.1 68.27Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M143.88,183.5c-0.16,0-1,2.24-2.49,3.38a8.85,8.85,0,0,1-5,1.88,7.94,7.94,0,0,1-5.55-1.88,9.91,9.91,0,0,1-2.66-4.8A13.93,13.93,0,0,1,129,174c1.6-3.92,5.7-8.46,7.28-10.23s4-4.57,5.09-5.9,2.16-2.95,2.49-2.95,1.66,1.88,2.6,2.95,3.23,4,5,6a54.9,54.9,0,0,1,4.91,6.11,20.33,20.33,0,0,1,2.2,4.07,14.26,14.26,0,0,1,0.77,8.09,8.08,8.08,0,0,1-7.88,6.61,8.56,8.56,0,0,1-5-1.81A10.84,10.84,0,0,1,143.88,183.5Z" />
     <path
-        android:pathData="M89.77,104.08c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88 9.91,9.91 0,0 1,2.66 4.8,13.93 13.93,0 0,1 -0.87,8.09c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95 -1.66,-1.88 -2.6,-2.95 -3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11A20.33,20.33 0,0 1,75 113.6a14.26,14.26 0,0 1,-0.77 -8.09,8.08 8.08,0 0,1 7.88,-6.61 8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,89.77 104.08Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M55.71,24.65V29a9.62,9.62,0,0,1-0.43,3.16,18.52,18.52,0,0,1-0.83,2l-22.29,46a6.9,6.9,0,0,1-2,2.42,5.37,5.37,0,0,1-3.42,1H19.49l22.82-45a23.47,23.47,0,0,1,3.18-4.77H17.29A2.37,2.37,0,0,1,15,31.46v-6.8Z" />
     <path
-        android:pathData="M117,68.27c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88 9.91,9.91 0,0 1,2.66 4.8,13.93 13.93,0 0,1 -0.87,8.09c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95 -1.66,-1.88 -2.6,-2.95 -3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11,20.33 20.33,0 0,1 -2.2,-4.07 14.26,14.26 0,0 1,-0.77 -8.09,8.08 8.08,0 0,1 7.88,-6.61 8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,117 68.27Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M63.08,132.54c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88A9.91,9.91 0,0 1,78.8 134a13.93,13.93 0,0 1,-0.87 8.09c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95 -1.66,-1.88 -2.6,-2.95 -3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11,20.33 20.33,0 0,1 -2.2,-4.07 14.26,14.26 0,0 1,-0.77 -8.09,8.08 8.08,0 0,1 7.88,-6.61 8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,63.08 132.54Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M117,132.54c0.16,0 1,-2.24 2.49,-3.38a8.85,8.85 0,0 1,5 -1.88,7.94 7.94,0 0,1 5.55,1.88 9.91,9.91 0,0 1,2.66 4.8,13.93 13.93,0 0,1 -0.87,8.09c-1.6,3.92 -5.7,8.46 -7.28,10.23s-4,4.57 -5.09,5.9 -2.16,2.95 -2.49,2.95 -1.66,-1.88 -2.6,-2.95 -3.23,-4 -5,-6a54.9,54.9 0,0 1,-4.91 -6.11,20.33 20.33,0 0,1 -2.2,-4.07 14.26,14.26 0,0 1,-0.77 -8.09,8.08 8.08,0 0,1 7.88,-6.61 8.56,8.56 0,0 1,5 1.81A10.84,10.84 0,0 1,117 132.54Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M117.23,219.58c-0.16,0 -1,2.24 -2.49,3.38a8.85,8.85 0,0 1,-5 1.88,7.94 7.94,0 0,1 -5.55,-1.88 9.91,9.91 0,0 1,-2.66 -4.8,13.93 13.93,0 0,1 0.87,-8.09c1.6,-3.92 5.7,-8.46 7.28,-10.23s4,-4.57 5.09,-5.9 2.16,-2.95 2.49,-2.95 1.66,1.88 2.6,2.95 3.23,4 5,6a54.9,54.9 0,0 1,4.91 6.11,20.33 20.33,0 0,1 2.2,4.07 14.26,14.26 0,0 1,0.77 8.09,8.08 8.08,0 0,1 -7.88,6.61 8.56,8.56 0,0 1,-5 -1.81A10.84,10.84 0,0 1,117.23 219.58Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M63.26,219.61c-0.16,0 -1,2.24 -2.49,3.38a8.85,8.85 0,0 1,-5 1.88A7.94,7.94 0,0 1,50.2 223a9.91,9.91 0,0 1,-2.66 -4.8,13.93 13.93,0 0,1 0.87,-8.09c1.6,-3.92 5.7,-8.46 7.28,-10.23s4,-4.57 5.09,-5.9S62.94,191 63.26,191s1.66,1.88 2.6,2.95 3.23,4 5,6A54.9,54.9 0,0 1,75.81 206a20.33,20.33 0,0 1,2.2 4.07,14.26 14.26,0 0,1 0.77,8.09 8.08,8.08 0,0 1,-7.88 6.61,8.56 8.56,0 0,1 -5,-1.81A10.84,10.84 0,0 1,63.26 219.61Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M159,243a5.63,5.63 0,0 1,-1.05 1.43,3.74 3.74,0 0,1 -2.13,0.8 3.36,3.36 0,0 1,-2.35 -0.8,4.19 4.19,0 0,1 -1.12,-2 5.89,5.89 0,0 1,0.37 -3.42,17.94 17.94,0 0,1 3.08,-4.32c0.67,-0.75 1.68,-1.93 2.15,-2.49s0.91,-1.25 1.05,-1.25 0.7,0.79 1.1,1.25 1.37,1.67 2.13,2.52a23.21,23.21 0,0 1,2.08 2.58,8.59 8.59,0 0,1 0.93,1.72 6,6 0,0 1,0.33 3.42,3.41 3.41,0 0,1 -3.33,2.8 3.62,3.62 0,0 1,-2.13 -0.77A4.58,4.58 0,0 1,159 243Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M28.78,17.24v1.5a3.28,3.28 0,0 1,-0.15 1.08,6.38 6.38,0 0,1 -0.29,0.69L20.68,36.31a2.38,2.38 0,0 1,-0.67 0.83,1.85 1.85,0 0,1 -1.18,0.34H16.33L24.17,22a8.1,8.1 0,0 1,1.09 -1.64H15.57a0.81,0.81 0,0 1,-0.8 -0.8V17.24Z"
-        android:fillColor="#dd5050"/>
-    <path
-        android:pathData="M151.16,270.59v-1.5a3.31,3.31 0,0 1,0.15 -1.08,6.14 6.14,0 0,1 0.29,-0.69l7.66,-15.79a2.37,2.37 0,0 1,0.67 -0.83,1.85 1.85,0 0,1 1.18,-0.34h2.51l-7.84,15.47a8.1,8.1 0,0 1,-1.09 1.64h9.69a0.81,0.81 0,0 1,0.8 0.8v2.34Z"
-        android:fillColor="#dd5050"/>
+        android:fillColor="#dd5050"
+        android:pathData="M123,263.09V258.7a9.71,9.71,0,0,1,0.43-3.18,18.58,18.58,0,0,1,0.84-2l22.46-46.32a7,7,0,0,1,2-2.44,5.41,5.41,0,0,1,3.45-1h7.35l-23,45.37a23.71,23.71,0,0,1-3.2,4.8h28.42a2.38,2.38,0,0,1,2.34,2.34v6.86Z" />
 </vector>
