--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/game_background"
     android:padding="32dp"
-    tools:context="com.example.android.egyptianratscrew.HomeActivity">
+    tools:context="com.egyptianratscrew.android.egyptianratscrew.com.egyptianratscrew.android.HomeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
