--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
@@ -10,53 +11,91 @@
     <ImageView
         android:id="@+id/player_two_card_back"
         style="@style/game_card"
-        android:layout_marginTop="-120dp"
-        android:rotation="180" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:rotation="180"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_card_2"
+        app:layout_constraintDimensionRatio="5:8"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_right"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_left2" />
 
     <ImageView
         android:id="@+id/player_two_card"
         style="@style/game_card"
-        android:layout_marginTop="-120dp"
-        android:rotation="180" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:rotation="180"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_card_2"
+        app:layout_constraintDimensionRatio="5:8"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_left2" />
 
     <ImageButton
         android:id="@+id/p2_slap"
         style="@style/game_image_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_toEndOf="@id/player_two_card"
-        android:onClick="playerTwoSlap"
+        android:layout_toRightOf="@id/player_two_card"
         android:rotation="180"
         android:src="@drawable/hand_icon"
-        android:layout_toRightOf="@id/player_two_card" />
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_right"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/p2_play"
         style="@style/game_image_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_toLeftOf="@id/player_two_card"
         android:layout_toStartOf="@id/player_two_card"
-        android:onClick="playerTwoPlay"
         android:rotation="180"
         android:src="@drawable/play_icon"
-        android:layout_toLeftOf="@id/player_two_card" />
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_left2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/num_cards_player_two"
         style="@style/num_cards_text"
-        android:layout_marginTop="20dp"
         android:rotation="180"
-        tools:text="7"/>
+        app:layout_constraintBottom_toTopOf="@+id/guideline_card_2"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_left2"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="7" />
 
     <ImageView
         android:id="@+id/middle_card"
-        android:layout_width="@dimen/card_width"
-        android:layout_height="@dimen/card_height"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_centerInParent="true"
-        android:scaleType="fitXY" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="5:8"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_left2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/middle_icon"
-        android:layout_width="@dimen/mid_icon_size"
-        android:layout_height="@dimen/mid_icon_size"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_centerInParent="true"
-        android:scaleType="centerCrop" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/burn_slap"
@@ -64,18 +103,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/lato"
         android:gravity="center"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linear_layout_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="-80dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
-        android:rotation="-90"
-        android:layout_marginLeft="-80dp">
+        android:rotation="270"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/home_button"
@@ -95,6 +147,11 @@
             android:onClick="resetButton"
             android:text="@string/menu_reset" />
 
+        <Button
+            android:id="@+id/help_button"
+            style="@style/game_button"
+            android:text="@string/menu_help" />
+
     </LinearLayout>
 
     <TextView
@@ -102,51 +159,111 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="50dp"
         android:layout_marginStart="50dp"
         android:layout_toEndOf="@id/middle_card"
+        android:layout_toRightOf="@id/middle_card"
         android:fontFamily="@font/lato"
         android:rotation="90"
         android:textSize="@dimen/font_size_num_cards"
         android:textStyle="bold"
-        android:visibility="gone"
-        android:layout_toRightOf="@id/middle_card"
-        android:layout_marginLeft="50dp" />
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/player_one_card_back"
         style="@style/game_card"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="-120dp" />
+        app:layout_constraintDimensionRatio="5:8"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_left2"
+        app:layout_constraintTop_toTopOf="@+id/guideline_card_1" />
 
     <ImageView
         android:id="@+id/player_one_card"
         style="@style/game_card"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="-120dp" />
+        app:layout_constraintDimensionRatio="5:8"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_right"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_left2"
+        app:layout_constraintTop_toTopOf="@+id/guideline_card_1" />
 
     <ImageButton
         android:id="@+id/p1_slap"
         style="@style/game_image_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@id/player_one_card"
         android:layout_toStartOf="@id/player_one_card"
-        android:onClick="playerOneSlap"
         android:src="@drawable/hand_icon"
-        android:layout_toLeftOf="@id/player_one_card" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_left2"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/p1_play"
         style="@style/game_image_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@id/player_one_card"
-        android:onClick="playerOnePlay"
+        android:layout_toRightOf="@id/player_one_card"
         android:src="@drawable/play_icon"
-        android:layout_toRightOf="@id/player_one_card" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_right" />
 
     <TextView
         android:id="@+id/num_cards_player_one"
         style="@style/num_cards_text"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        tools:text="10"/>
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_card_1_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_card_1_left2"
+        app:layout_constraintTop_toTopOf="@+id/guideline_card_1"
+        tools:text="10" />
 
-</RelativeLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_card_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.20" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_card_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.80" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_card_1_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.71" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_card_1_left2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.29166666" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+</android.support.constraint.ConstraintLayout>
