--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -70,7 +70,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginStart="24dp"
         android:text="@string/new_game"
         app:layout_constraintBottom_toBottomOf="@+id/continue_button"
         app:layout_constraintEnd_toStartOf="@+id/guideline33"
@@ -84,6 +86,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginStart="4dp"
         android:onClick="continueGame"
         android:text="@string/continue_game"
@@ -98,7 +102,9 @@
         style="@style/home_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="24dp"
         android:layout_marginStart="4dp"
         android:onClick="settings"
         android:text="@string/settings"
@@ -114,7 +120,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginStart="24dp"
         android:text="@string/one_player"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -127,12 +135,15 @@
         style="@style/home_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="24dp"
         android:layout_marginStart="4dp"
         android:onClick="continueGame"
         android:text="@string/two_player"
         app:layout_constraintBottom_toBottomOf="@+id/one_player_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.17"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/one_player_button" />
 
